# aceeri-com

./: Cargo.toml
data/: index.post  sidebutton.json
data/posts/: Test  helloworld.json  testing.json
pages/: index.html
res/: index.html  style.css
res/css/: main.css  nojs-style.css  roboto.css  style.css
src/: data.rs  lib.rs  main.rs  old_post.rs  post.rs  render.rs
templates/: index.hbs  project.hbs  sidebar.hbs
templates/sidebar/: index.hbs  projects.hbs
